# Project-Demiurge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSOIL.cmake
includes/glad/: glad.h
resources/shaders/fragment/: changingColor.frag  colorInput.frag  texture.frag
resources/shaders/vertex/: colorInput.vert  colorInputOffset.vert  translation.vert
src/: glad.c  stb_image.c
src/rendering/: shader.cpp  shader.h  texture.cpp  texture.h
